# linear-adr-optimizer

./: .gitignore  README.md  adr_pareto_search.py
.github/workflows/: adr-optimizer-helper.yml
adr_pareto/: __main__.py  bridge.py
helper/: README.md
rust/: Cargo.toml
rust/assets/web/: adr_plot.css  adr_plot.js  index.html
rust/src/: cli.rs  config.rs  export.rs  lib.rs  main.rs  progress.rs  types.rs
rust/src/model/: adr.rs  behavior.rs  fsrs_v6.rs  mod.rs  simulate.rs
rust/src/output/: html.rs  mod.rs  png.rs  summary.rs  text.rs
rust/src/search/: batch.rs  candidates.rs  fixed_curve.rs  mod.rs  phases.rs  rank.rs  safety.rs  select.rs
