[package]
name = "linear-adr-optimizer"
version = "0.1.0"
edition = "2021"

[lib]
name = "linear_adr_optimizer"
path = "src/lib.rs"

[[bin]]
name = "adr-optimizer"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
plotters = { version = "0.3", default-features = false, features = ["bitmap_backend", "bitmap_encoder", "line_series", "point_series"] }
rand = "0.9.2"
rand_chacha = "0.9.0"
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
